added scale to getFigureDrawingArea for decorated figures